@@ -1,3 +1,8 @@
+2000-06-24  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Hunger (everyone's favorite feature!)
+	* More fiddling (possibly improvement) in followers of Avatar.
+
 2000-06-22  Jeff Freedman  <jeff@patches.simutech.com>
 
 	* effects.cc: Untested: Faster projectiles.  Run usecode at end.
